kubernetes/Jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: public.ecr.aws/e8n4i2w8/jenkins:latest
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: docker-graph-storage
          mountPath: /var/lib/docker
      - name: docker
        image: docker:20-dind
        securityContext:
          privileged: true
        ports:
        - containerPort: 2375
        volumeMounts:
        - name: docker-graph-storage
          mountPath: /var/lib/docker
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc
      - name: docker-graph-storage
        emptyDir: {}
      securityContext:
        fsGroup: 1000
